--- a/Proyecto/src/Interfaz/PrincipalReportes.form
+++ b/Proyecto/src/Interfaz/PrincipalReportes.form
@@ -33,10 +33,12 @@
                   <Component id="bntReporte1" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="95" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="bntReporte5" min="-2" max="-2" attributes="0"/>
-                  <Component id="bntReporte4" min="-2" max="-2" attributes="0"/>
-                  <Component id="bntReporte6" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="bntReporte5" min="-2" max="-2" attributes="0"/>
+                      <Component id="bntReporte6" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="bntPrueba" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="199" max="32767" attributes="0"/>
           </Group>
@@ -52,8 +54,8 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="88" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="bntReporte4" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="bntReporte1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="bntPrueba" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -89,14 +91,6 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntReporte3ActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="bntReporte4">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Reporte 4"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntReporte4ActionPerformed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JButton" name="bntReporte5">
       <Properties>
         <Property name="text" type="java.lang.String" value="Reporte 5"/>
@@ -109,6 +103,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Reporte 6"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntReporte6ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="bntReporte1">
       <Properties>
@@ -124,6 +121,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntRegresarActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="bntPrueba">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Reporte 4"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntPruebaActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
